--- a/style.css
+++ b/style.css
@@ -15,11 +15,14 @@ h1 {
 }
 
 /* STYLE IMAGES */
- {
-   
+ .images{
+   max-width: 100px;
+   max-height: 100px;
 }
 /* STYLE NAV BAR */
 
 /* STYLE BUTTONS */
 
 /* ADD MORE! */
+#mainPoints{
+}
